feat: Update features and refactor message handling
This commit introduces several new features and improvements to the plugin:

- Adds support for Paper version 1.21.10.
- Separates all user-facing messages from `config.yml` into a new `messages.yml` file to improve configurability and maintainability.
- Refactors the message system to provide different messages for punishments with and without a specified reason, for all punishment types.
- Adds a default kick reason to `messages.yml`.
- Fixes a bug in `UnbanCommand` and `UnmuteCommand` that could cause a `NullPointerException` when dealing with offline players.
- Improves the `IpBanCommand` to allow for custom reasons and to use the new message system.